<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">TinyBit launcher</string>
    <string name="app_name_debug">TinyBit debug launcher</string>
    <string name="hint_ui_search">Search in apps, contacts, …</string>
    <string name="ui_item_search">Search in %1$s for \"%2$s\"?</string>
    <string name="ui_item_visit">Visit \"%1$s\"</string>
    <string name="copy_confirmation">Copied \"%s\" to clipboard</string>
    <string name="removed_item">Removed %s</string>
    <string name="toast_hibernate_completed">%s hibernated, relaunch to awake</string>
    <string name="toast_hibernate_error">[ERROR] %s not hibernated</string>
    <string name="unable_to_initialize_shortcuts">Could not access shortcuts. Is TinyBit your default launcher?</string>
    <string name="cant_pin_shortcut">Could not add shortcut. Is TinyBit your default launcher?</string>
    <string name="menu_quick_list_add">Add to dock</string>
    <string name="menu_quick_list_remove">Remove from dock</string>
    <string name="menu_remove_history">Remove from history</string>
    <string name="menu_tag_sort_az">Sort name A to Z</string>
    <string name="menu_tag_sort_za">Sort name Z to A</string>
    <string name="menu_tag_sort_hist_rec">Sort by last accessed</string>
    <string name="menu_tag_sort_hist_freq">Sort most accessed</string>
    <string name="menu_tag_sort_hist_frec">Sort last and most accessed</string>
    <string name="menu_tag_sort_hist_adaptive">Sort adaptive history</string>
    <string name="stub_application">App name</string>
    <string name="stub_app_tag">app tag list</string>
    <string name="permission_denied">Grant this permission first</string>
    <string name="menu_exclude">Exclude…</string>
    <string name="menu_hide">Hide</string>
    <string name="menu_show">Reveal</string>
    <string name="menu_remove_shortcut">Unpin</string>
    <string name="menu_tags_add">Add tags</string>
    <string name="menu_tags_edit">Edit tags</string>
    <string name="menu_app_details">App info</string>
    <string name="menu_app_store">View in store</string>
    <string name="menu_app_uninstall">Uninstall</string>
    <string name="menu_app_hibernate">Hibernate</string>
    <string name="menu_exclude_history">from history</string>
    <string name="menu_exclude_kiss">from TinyBit</string>
    <string name="application_not_found">Unable to launch \"%s\" app</string>
    <string name="entry_not_found">Could not find \"%s\"</string>
    <string name="change_wallpaper">Change wallpaper</string>
    <string name="menu_widget_title">Widget menu</string>
    <string name="menu_widget_add">Add Widget…</string>
    <string name="menu_widget_remove">Remove Widget…</string>
    <string name="menu_widget_configure">Customize Widget…</string>
    <string name="menu_widget_setup">Configure Widget…</string>
    <string name="menu_popup_title">Main menu</string>
    <string name="menu_popup_title_settings">Settings</string>
    <string name="menu_popup_android_settings">Device settings</string>
    <string name="menu_popup_launcher_settings">TinyBit settings</string>
    <string name="menu_popup_tags_manager">Tag manager</string>
    <string name="menu_popup_tags_menu">Tags menu</string>
    <string name="rate_the_app">Rate the app</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="app_version">Version %s</string>
    <string name="app_version_summary">%1$s - %2$s</string>
    <string name="user_interface_summary">Themes, transparency and colors</string>
    <string name="title_ui">User interface</string>
    <string name="notification_bar_section">Notification bar</string>
    <string name="color_and_opacity">Color and opacity</string>
    <string name="gradient">Gradient</string>
    <string name="black_notification_icons">Dark icons</string>
    <string name="cd_main_menu">Menu</string>
    <string name="cd_main_clear">Clear search bar</string>
    <string name="cd_show_all_apps">Show all apps</string>
    <string name="cd_item_contact_message">Message</string>
    <string name="cd_item_contact_call">Call</string>
    <string name="cd_item_contact_open">Open</string>
    <string name="cd_add_tag">Add tag</string>
    <string name="cd_undo_remove_tag">Undo remove tag</string>
    <string name="cd_remove_tag">Remove tag</string>
    <string name="cd_rename_tag">Rename tag</string>
    <string name="cd_icon_tag">Set tag icon</string>
    <string name="title_select_alpha">Drag the slider to select the desired opacity</string>
    <string name="title_select_size">Drag the slider to select the desired size</string>
    <string name="search_bar_section">Search bar</string>
    <string name="search_bar_text_size">Text size</string>
    <string name="search_bar_height">Bar height</string>
    <string name="result_list_section">Result list</string>
    <string name="icons_pack">Choose pack</string>
    <string name="icons_pack_default_name">System icons</string>
    <string name="value">value %d</string>
    <string name="value_float">value %.2f</string>
    <string name="value_float_xy">horizontal %1$.2f | vertical %2$.2f</string>
    <string name="size">&lt;%d&gt;</string>
    <string name="size_float">&lt;%.1f&gt;</string>
    <string name="shadow_preview">&lt;%3$.1f&gt;\n&lt;%1$.1f&#215;%2$.1f&gt;</string>
    <string name="offset_preview">&lt;%1$.1f&#215;%2$.1f&gt;</string>
    <string name="menu_app_rename">Rename app</string>
    <string name="menu_action_rename">Rename</string>
    <string name="menu_action_delete">Delete</string>
    <string name="menu_shortcut_rename">Rename shortcut</string>
    <string name="menu_custom_icon">Change icon</string>
    <string name="title_app_rename">Choose a custom name for this app</string>
    <string name="title_rename_tag">Replace everywhere this tag appears</string>
    <string name="hint_rename_tag">Choose a different name for this tag</string>
    <string name="title_rename_search_engine">Choose a different name for this search engine</string>
    <string name="title_rename_search_hint">Choose a different name for this search hint</string>
    <string name="title_edit_url_search_engine">Choose a different URL for this search engine</string>
    <string name="title_shortcut_rename">Choose a custom name for this shortcut</string>
    <string name="app_rename_confirmation">The app name is now %s</string>
    <string name="shortcut_rename_confirmation">The shortcut name is now \"%s\"</string>
    <string name="entry_rename_confirmation">The name is now \"%s\"</string>
    <string name="hint_custom_icon">Filter by name</string>
    <string name="default_icon">default icon</string>
    <string name="default_static_icon">%s default icon</string>
    <string name="custom_icon_application">app</string>
    <string name="custom_icon_activity">activity</string>
    <string name="custom_icon_activity_adaptive_no_background">activity custom background</string>
    <string name="custom_icon_badged">badged</string>
    <string name="default_icon_preview_label">Default\nicon</string>
    <string name="current_icon_preview_label">Current\nicon</string>
    <string name="custom_icon_preview_label">Selected\nicon</string>
    <string name="custom_name_set_default">Default name</string>
    <string name="hint_new_tag">add tag</string>
    <string name="title_features">Layout</string>
    <string name="features_summary">Toggle and customize UI elements</string>
    <string name="quick_list_section">Dock</string>
    <string name="quick_list_enabled">Use dock</string>
    <string name="quick_list_icon_size">Max icon size</string>
    <string name="quick_list_height">Height</string>
    <string name="tags_section">Tags</string>
    <string name="fuzzy_search_tags">Fuzzy-search tags</string>
    <string name="fuzzy_search_tags_summary">When searching include tags as possible match candidates</string>
    <string name="tags_enabled">Display tags for apps</string>
    <string name="tags_enabled_summary">Show tags for each app in the result list</string>
    <string name="icons_visible">Show Icons</string>
    <string name="popup_title_shortcut_dynamic">Shortcuts</string>
    <string name="popup_title_hist_fav">Preferences</string>
    <string name="popup_title_customize">Customize</string>
    <string name="popup_title_link">Links</string>
    <string name="popup_title_debug">Debug info</string>
    <string name="shortcuts_no_host_permission">Make this your main launcher to access shortcuts.</string>
    <string name="pin_shortcut_message">Do you want to add this shortcut?</string>
    <string name="pin_shortcut_label">Choose shortcut label</string>
    <string name="pin_shortcut_icon">Shortcut icon</string>
    <string name="quick_list_only_for_results">Hide dock when no results</string>
    <string name="quick_list_only_for_results_summary">Make dock visible when the result list has entries</string>
    <string name="exit_the_app">Close launcher</string>
    <string name="exit_the_app_confirm">Close the launcher?</string>
    <string name="exit_the_app_description">Your default launcher will be opened, or you will be asked which one you want to use.</string>
    <string name="reset_default_launcher_confirm">Change the default launcher?</string>
    <string name="reset_default_launcher_description">Asks for app to open after pressing the homescreen.</string>
    <string name="reset_default_launcher">Change default launcher</string>
    <string name="filter_apps">App filter</string>
    <string name="filter_contacts">Contact filter</string>
    <string name="filter_shortcuts">Shortcuts filter</string>
    <string name="action_reload">Reload providers</string>
    <string name="action_toggle_grid">Toggle grid</string>
    <string name="action_show_apps">Apps A→Z</string>
    <string name="action_show_apps_grid4">App grid A→Z</string>
    <string name="action_show_apps_reversed">Apps Z→A</string>
    <string name="action_show_apps_grid4_reversed">App grid Z→A</string>
    <string name="action_show_contacts">Contacts A→Z</string>
    <string name="action_show_contacts_reversed">Contacts Z→A</string>
    <string name="action_show_shortcuts">Shortcuts A→Z</string>
    <string name="action_show_shortcuts_reversed">Shortcuts Z→A</string>
    <string name="quick_list_content">Customize content</string>
    <string name="quick_list_content_summary">Change order and add entries</string>
    <string name="quick_list_icons_visible">Show icons</string>
    <string name="quick_list_text_visible">Show names</string>
    <string name="cache_drawable">Cache icons</string>
    <string name="screen_off_cache_clear">Release cache often</string>
    <string name="screen_off_cache_clear_summary">Empty cache when screen turns off</string>
    <string name="memory_section">Memory</string>
    <string name="hint_add_search_engine_url">https://search.engine/query=%s</string>
    <string name="label_search_engine_name">Search provider name</string>
    <string name="label_search_engine_url">URL to open</string>
    <string name="search_engine_url_help">%s will be replaced by your query</string>
    <string name="static_icon_letters_label">Letters to use for generating icons</string>
    <string name="choose_letter_color">Letter color</string>
    <string name="choose_background_color">Background color</string>
    <string name="choose_icon_scale">Scale icon</string>
    <string name="choose_icon_shape">Choose shape</string>
    <string name="choose_icon">Choose icon</string>
    <string name="settings_white">White</string>
    <string name="settings_dark">Dark</string>
    <string name="settings_deep_blues">DeepBlues</string>
    <string name="letters_toggle">Letter icons</string>
    <string name="shadow_offset">Select pixel amount for shadow offset</string>
    <string name="shadow_radius">Shadow size <em>(zero size will disable shadow)</em></string>
    <string name="icons_section">Icons</string>
</resources>