<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/activity_settings">

    <item
        android:id="@+id/settingsAmoled"
        android:title="@string/settings_amoled"
        app:showAsAction="never" />

    <item
        android:id="@+id/settingsWhite"
        android:title="@string/settings_white"
        app:showAsAction="never" />

    <item
        android:id="@+id/settingsDark"
        android:title="@string/settings_dark"
        app:showAsAction="never" />

    <item
        android:id="@+id/settingsDeepBlues"
        android:title="@string/settings_deep_blues"
        app:showAsAction="never" />

</menu>