<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/dialog_padding_horizontal"
    android:paddingVertical="@dimen/dialog_padding_vertical"
    tools:layout_width="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@android:id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shadow_offset"
            android:textColor="?android:attr/textColorPrimary" />

        <rocks.tbog.tblauncher.ui.CustomizeShadowView
            android:id="@+id/viewXY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/textValueXY"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/value_float_xy"
            android:textAlignment="center"
            android:textColor="?android:attr/textColorPrimary" />

        <TextView
            android:id="@android:id/text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/shadow_radius"
            android:textColor="?android:attr/textColorPrimary" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp" />

        <TextView
            android:id="@+id/textValueSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/value"
            android:textColor="?android:attr/textColorPrimary" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>