<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/dialog_padding_horizontal"
    android:paddingVertical="@dimen/dialog_padding_vertical"
    tools:theme="@style/SettingsTheme.White">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="?android:attr/windowBackground"
        android:padding="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@android:id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_search_engine_name"
            android:importantForAutofill="no"
            android:inputType="textAutoCorrect"
            android:textAppearance="?android:attr/textAppearance" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="?android:attr/windowBackground"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/label_search_engine_url" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="?android:attr/windowBackground"
            android:padding="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@android:id/text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_add_search_engine_url"
                android:importantForAutofill="no"
                android:inputType="textUri" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/search_engine_url_help" />

    </LinearLayout>

</LinearLayout>