<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/searchBarContainer"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@null"
    android:clipChildren="false"
    android:visibility="gone"
    tools:visibility="visible">

    <rocks.tbog.tblauncher.ui.SearchEditText
        android:id="@+id/launcherSearch"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="start|center_vertical"
        android:hint="@string/hint_ui_search"
        android:imeOptions="flagNoExtractUi|actionSearch"
        android:importantForAutofill="no"
        android:inputType="textVisiblePassword|textNoSuggestions"
        android:singleLine="true"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/launcherButton"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="@color/Default_light"
        tools:backgroundTintMode="multiply"
        tools:textColor="@color/Default_text"
        tools:textColorHint="@color/Default_text"
        tools:textSize="16sp" />

    <ImageView
        android:id="@+id/launcherButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:clickable="true"
        android:contentDescription="@string/cd_show_all_apps"
        android:focusable="true"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1.5:1"
        app:layout_constraintLeft_toRightOf="@id/launcherSearch"
        app:layout_constraintRight_toLeftOf="@id/menuButton"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/launcher_pill"
        tools:background="?attr/selectableItemBackgroundBorderless"
        tools:tint="@color/Default_text"
        tools:tintMode="multiply" />

    <ImageView
        android:id="@+id/bkgBehindButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@id/launcherButton"
        app:layout_constraintDimensionRatio="1.5:1"
        app:layout_constraintEnd_toEndOf="@id/launcherButton"
        app:layout_constraintStart_toStartOf="@id/launcherButton"
        app:layout_constraintTop_toTopOf="@id/launcherButton"
        app:srcCompat="@drawable/launcher_pill_background"
        tools:background="?attr/selectableItemBackgroundBorderless"
        tools:ignore="ContentDescription"
        tools:tint="@color/Default_light"
        tools:tintMode="multiply" />

    <ImageView
        android:id="@+id/menuButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@string/cd_main_menu"
        android:focusable="true"
        android:paddingLeft="@dimen/launcher_button_padding"
        android:paddingRight="@dimen/launcher_button_padding"
        android:scaleType="fitCenter"
        android:textAlignment="center"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintBottom_toBottomOf="@id/launcherButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/launcherButton"
        app:srcCompat="@drawable/ic_dots" />

    <ImageView
        android:id="@+id/clearButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@string/cd_main_clear"
        android:focusable="true"
        android:paddingLeft="@dimen/launcher_button_padding"
        android:paddingRight="@dimen/launcher_button_padding"
        android:scaleType="fitCenter"
        android:textAlignment="center"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/menuButton"
        app:layout_constraintEnd_toEndOf="@id/menuButton"
        app:layout_constraintStart_toStartOf="@id/menuButton"
        app:layout_constraintTop_toTopOf="@id/menuButton"
        app:srcCompat="@drawable/ic_clear" />

</androidx.constraintlayout.widget.ConstraintLayout>
